<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="com.myexamplemetcast.citiescleanarch.presentation.ui.MainActivity">

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"

        android:text="@string/info"

        app:layout_constraintBottom_toTopOf="@+id/linLat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linLat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linLon"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo"
        app:layout_goneMarginTop="16dp">

        <TextView
            android:id="@+id/tvlat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/latitude" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lat_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:id="@+id/et_lat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:inputType="number"

                android:textSize="16sp"
                tools:text="@string/latitude"
                android:hint="@string/hint_latitude"
                android:theme="@style/MyEditText" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLon"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="318dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"

        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linLat">

        <TextView
            android:id="@+id/tvLon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/longitude" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lon_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:id="@+id/etLon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:gravity="center"
                android:textSize="16sp"
                android:hint="@string/hint_longitude"
                tools:text="@string/longitude"
                android:theme="@style/MyEditText" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linLon" />

</android.support.constraint.ConstraintLayout>
